<resources>
    <string name="app_name">CarEyeClient</string>
    <string name="open_video_failed">Failed to open video url: %s !</string>
    <string name="broadCast_speed_man">慢</string>
    <string name="broadCast_speed_kuai">快</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="map_monitor">地图监控</string>
    <string name="video_preview">视频预览</string>
    <string name="track_playback">轨迹回放</string>
    <string name="replay">录像回放</string>
    <string name="setting">设置</string>
    <string name="warn">报警</string>
    <string name="devlist_all">所有</string>
    <string name="devlist_online">在线</string>
    <string name="select_time_tip">开始时间不得大于结束时间</string>
    <string name="short_hour">时</string>
    <string name="short_minute">分</string>
    <string name="short_second">秒</string>
    <string name="short_year">年</string>
    <string name="short_month">月</string>
    <string name="short_day">日</string>
    <string name="select_time">选择时间</string>
    <string name="app_fanhao">方浩互联</string>
    <string name="app_sscit">SSCIT</string>
    <string name="app_lanyan">蓝眼速传</string>
    <string name="app_xfleet">Xfleet</string>
    <string name="app_kddl">康盾电力</string>
    <string name="app_bsj">博云视控</string>
    <string name="app_vf">ORIS 360 4G</string>
    <string name="app_kangjia">执法影像</string>
    <string name="app_hb">车载监控视频</string>
    <string name="app_yingjia">鹰驾云</string>
    <string name="app_aosen">奥森视频</string>
    <string name="colon">:</string>
    <string name="second">秒</string>
    <string name="minute">分钟</string>
    <string name="labelTime">时间：</string>
    <string name="labelSpeed">速度：</string>
    <string name="labelLicheng">里程：</string>
    <string name="labelAlarm">报警：</string>
    <string name="labelStatus">状态：</string>
    <string name="labelAddress">地址：</string>
    <string name="labelDriver">司机：</string>
    <string name="speed_kmPerHour">KM/H</string>
    <string name="speed_labelKmPerHour">(KM/H)</string>
    <string name="licheng_labelKM">(公里)</string>
    <string name="gpsUnvalid">定位无效</string>
    <string name="accOpen">ACC开启</string>
    <string name="accClose">ACC关闭</string>
    <string name="turnLeft">左转</string>
    <string name="turnRight">右转</string>
    <string name="brake">刹车</string>
    <string name="turnPositive">正转</string>
    <string name="turnReserve">反转</string>
    <string name="gpsAntennaNormal">定位模块存在</string>
    <string name="gpsAntennaUnvalid">定位模块不存在</string>
    <string name="disk">硬盘</string>
    <string name="disk1">硬盘1</string>
    <string name="disk2">硬盘2</string>
    <string name="diskNormal">正常</string>
    <string name="diskNoExist">不存在</string>
    <string name="diskNoElec">断电</string>
    <string name="netSimNoExist">SIM卡不存在</string>
    <string name="netClose">无线模块关闭</string>
    <string name="netNoExist">无线模块不存在</string>
    <string name="netPoor">网络信号差</string>
    <string name="netNormal">网络信号一般</string>
    <string name="netGood">网络信号好</string>
    <string name="netExcellent">网络信号优</string>
    <string name="still">静止</string>
    <string name="parkAccon">停车未熄火</string>
    <string name="overSpeed">超速</string>
    <string name="cancel">取消</string>
    <string name="menu_settings">设置</string>
    <string name="login_login">登录</string>
    <string name="login_pwd">密码</string>
    <string name="login_account">账号</string>
    <string name="login_save_pwd">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_server">服务器</string>
    <string name="login_account_empty">账号不得为空！</string>
    <string name="login_pwd_empty">密码不得为空！</string>
    <string name="login_server_empty">服务器不得为空！</string>
    <string name="splash_logining">正在登录，请等待…</string>
    <string name="splash_loading">正在加载信息，请等待…</string>
    <string name="splash_loading_failed">加载信息失败</string>
    <string name="splash_login_failed">登录失败</string>
    <string name="splash_login_user_error">用户名不存在</string>
    <string name="splash_login_pwd_error">密码有误</string>
    <string name="splash_login_user_expired">用户账号已过期</string>
    <string name="splash_login_address_error">服务器地址有误</string>
    <string name="splash_login_server_error">无法连接服务器，请检查网络连接是否可用</string>
    <string name="splash_login_server_no_support">服务器证书验证失败</string>
    <string name="splash_login_abnormal_account">账号异常</string>
    <string name="splash_login_disk_full">磁盘满</string>
    <string name="splash_login_device_registration_not_match">设备注册数目不匹配</string>
    <string name="splash_loginsingle_click_log_in_elsewhere">用户启用了单点登录，并已经在其他地方登录</string>
    <string name="splash_down_failed">下载失败</string>
    <string name="splash_down_failed_tip">下载升级文件失败</string>
    <string name="update_title">软件更新</string>
    <string name="update_date">更新日期：</string>
    <string name="update_new_ver">发现新版本：</string>
    <string name="update_update">更新</string>
    <string name="update_next">暂不更新</string>
    <string name="update_downing">正在下载</string>
    <string name="update_wait">请等待…</string>
    <string name="device_search">搜索</string>
    <string name="device_list_title">终端列表</string>
    <string name="devlist_loading">正在读取终端列表，请稍候…</string>
    <string name="devlist_load_failed">获取终端列表信息失败</string>
    <string name="devlist_menu_map">地图</string>
    <string name="devlist_menu_video">视频</string>
    <string name="devlist_menu_track">轨迹</string>
    <string name="devlist_menu_tip">请选择操作菜单</string>
    <string name="devlist_select">选择</string>
    <string name="devlist_select_online_tip">请选择在线终端！</string>
    <string name="devlist_monitor_center">监控中心</string>
    <string name="map_title">地图监控</string>
    <string name="map_device_label_status">状态：</string>
    <string name="map_flash">秒后刷新</string>
    <string name="map_flashing">正在刷新</string>
    <string name="map_select_flash_interval">选择刷新时间间隔</string>
    <string name="gps_licheng_unit_km">公里</string>
    <string name="gps_licheng_unit_mile">英里</string>
    <string name="gps_north">北</string>
    <string name="gps_northEast">东北</string>
    <string name="gps_east">东</string>
    <string name="gps_southEast">东南</string>
    <string name="gps_south">南</string>
    <string name="gps_southWest">西南</string>
    <string name="gps_west">西</string>
    <string name="gps_northWest">西北</string>
    <string name="gps_normal">正常</string>
    <string name="gps_alarm">报警</string>
    <string name="gps_offline">离线</string>
    <string name="gps_idle">停车未熄火</string>
    <string name="toolbar_terminal">终端</string>
    <string name="toolbar_monitor">地图</string>
    <string name="toolbar_video">视频</string>
    <string name="toolbar_setting">更多</string>
    <string name="tip_next_version">下一版本提供视频预览功能</string>
    <string name="setting_title">设置</string>
    <string name="setting_geoaddress">地理位置解析</string>
    <string name="setting_account">用户</string>
    <string name="setting_logout">切换用户</string>
    <string name="setting_gpsfix">位置校正</string>
    <string name="setting_map_server">使用服务器地图</string>
    <string name="setting_speed_unit">速度单位</string>
    <string name="setting_version">版本</string>
    <string name="setting_version_date">日期：</string>
    <string name="setting_version_ver">版本：</string>
    <string name="setting_url">用户网址</string>
    <string name="speed_unit_title">速度单位</string>
    <string name="speed_unit_km">公里</string>
    <string name="speed_unit_mile">英里</string>
    <string name="user_url_title">浏览</string>
    <string name="preview_title">视频预览</string>
    <string name="search">搜索</string>
    <string name="person_sex">性别：</string>
    <string name="person_tele">电话：</string>
    <string name="person_idno">编号：</string>
    <string name="person_post">职务：</string>
    <string name="person_address">住址：</string>
    <string name="person_position">位置：</string>
    <string name="person_remark">备注：</string>
    <string name="dvr_linkman">联系人：</string>
    <string name="dvr_tele">电话：</string>
    <string name="dvr_sim">SIM卡：</string>
    <string name="dvr_address">地址：</string>
    <string name="dvr_remark">备注：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="post_caption">队长</string>
    <string name="post_member">队员</string>
    <string name="exit_title">友情提示</string>
    <string name="exit_tip">您确定要退出吗？</string>
    <string name="track_device">选择</string>
    <string name="track_date">选择日期</string>
    <string name="track_begin_time">开始时间</string>
    <string name="track_end_time">结束时间</string>
    <string name="playback_search">录像查找</string>
    <string name="playback_location">文件位置</string>
    <string name="playback_channel">通道</string>
</resources>