<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150.0dip"
    android:paddingLeft="15.0dip"
    android:paddingRight="15.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <org.careye.widgets.WheelView
            android:id="@id/wheel_hour"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_weight="1.0" />

        <org.careye.widgets.WheelView
            android:id="@id/wheel_minute"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_weight="1.0" />

        <org.careye.widgets.WheelView
            android:id="@id/wheel_second"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_weight="1.0" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150.0dip">

        <View
            android:id="@id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="50.0dip"
            android:background="#ff63a5bd" />

        <View
            android:id="@id/view2"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@id/view1"
            android:layout_marginTop="50.0dip"
            android:background="#ff63a5bd" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150.0dip"
        android:gravity="center">

        <TextView
            android:id="@id/wheel_tip1"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_weight="1.0"
            android:gravity="right|center"
            android:text="@string/short_hour" />

        <TextView
            android:id="@id/wheel_tip2"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_weight="1.0"
            android:gravity="right|center"
            android:text="@string/short_minute" />

        <TextView
            android:id="@id/wheel_tip3"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_weight="1.0"
            android:gravity="right|center"
            android:text="@string/short_second" />
    </LinearLayout>
</FrameLayout>