<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@id/playsearch_layout_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/device_list_iv_back"
            android:layout_width="28.0dip"
            android:layout_height="28.0dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@android:string/ok"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_selector" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/playback_search"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/playsearch_layout_top"
        android:background="@android:color/white"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip">

            <LinearLayout
                android:id="@id/playback_layout_device"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/bg_more_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:text="@string/track_device"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_section_key_size" />

                <TextView
                    android:id="@id/playback_dev_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2.0dip"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_weight="0.0"
                    android:contentDescription="@android:string/ok"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_more" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/playback_layout_location"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/bg_more_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:text="@string/playback_location"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_section_key_size" />

                <TextView
                    android:id="@id/playback_loc_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2.0dip"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_weight="0.0"
                    android:contentDescription="@android:string/ok"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_more" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/playback_layout_channel"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/bg_more_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:text="@string/playback_channel"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_section_key_size" />

                <TextView
                    android:id="@id/playback_file_chn_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2.0dip"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_weight="0.0"
                    android:contentDescription="@android:string/ok"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_more" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:id="@id/playback_layout_file_type"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="50.0dip"-->
                <!--android:background="@drawable/bg_more_selector"-->
                <!--android:clickable="true"-->
                <!--android:gravity="center_vertical"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="0.0dip"-->
                    <!--android:layout_height="fill_parent"-->
                    <!--android:layout_weight="1.0"-->
                    <!--android:gravity="left|center"-->
                    <!--android:paddingLeft="10.0dip"-->
                    <!--android:text="@string/playback_file_type"-->
                    <!--android:textColor="@android:color/black"-->
                    <!--android:textSize="@dimen/settings_section_key_size" />-->

                <!--<TextView-->
                    <!--android:id="@id/playback_file_type_value"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginRight="2.0dip"-->
                    <!--android:textColor="@android:color/black" />-->

                <!--<ImageView-->
                    <!--android:layout_width="30.0dip"-->
                    <!--android:layout_height="30.0dip"-->
                    <!--android:layout_weight="0.0"-->
                    <!--android:contentDescription="@android:string/ok"-->
                    <!--android:scaleType="fitCenter"-->
                    <!--android:src="@drawable/arrow_more" />-->
            <!--</LinearLayout>-->

            <LinearLayout
                android:id="@id/playback_layout_date"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/bg_more_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:text="@string/track_date"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_section_key_size" />

                <TextView
                    android:id="@id/playback_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="11.0dip"
                    android:maxLength="16"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/playback_layout_begin_time"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/bg_more_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:text="@string/track_begin_time"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_section_key_size" />

                <TextView
                    android:id="@id/playback_begin_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="11.0dip"
                    android:maxLength="16"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/playback_layout_end_time"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/bg_more_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="10.0dip"
                    android:text="@string/track_end_time"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/settings_section_key_size" />

                <TextView
                    android:id="@id/playback_end_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="11.0dip"
                    android:maxLength="16"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <RelativeLayout
                android:id="@id/playback_lySearch"
                android:layout_width="fill_parent"
                android:layout_height="42.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/btn_save_selector"
                android:clickable="true">

                <TextView
                    android:id="@id/playback_tvSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/search"
                    android:textColor="#ffffffff"
                    android:textSize="20.0dip" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>