<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/device_list_iv_back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:contentDescription="@android:string/ok"
            android:scaleType="center"
            android:src="@drawable/ic_back_selector" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_gravity="center">

            <Button
                android:id="@+id/device_list_btn_all"
                android:layout_width="90.0dip"
                android:layout_height="32.0dip"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_top_left"
                android:gravity="center"
                android:paddingLeft="5.0dip"
                android:singleLine="true"
                android:text="@string/devlist_all"
                android:textColor="@android:color/white"
                android:textSize="18.0sp" />

            <Button
                android:id="@+id/device_list_btn_online"
                android:layout_width="90.0dip"
                android:layout_height="32.0dip"
                android:layout_alignTop="@+id/device_list_btn_all"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/device_list_btn_all"
                android:background="@drawable/btn_top_right_night"
                android:singleLine="true"
                android:text="@string/devlist_online"
                android:textColor="@android:color/white"
                android:textSize="18.0sp" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_filter"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/ic_search_car"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/normalcolor"
            android:textSize="14sp"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:hint="请输入关键字"
            android:drawablePadding="8dp"
            android:background="@drawable/bg_input_filter"
            android:maxLines="1"
            android:visibility="visible"/>
        
        <TextView
            android:id="@+id/et_filter_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/device_search"/>

    </LinearLayout>

    <ListView
        android:id="@+id/device_listview_device"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/text"
        android:dividerHeight="1.0px" />
</LinearLayout>